# esco-skill-extractor

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: 01_ollama_local.py  02_openai_api.py  03_gemini.py  04_openwebui_openai_compatible.py  05_ollama_remote_host.py  06_openwebui_all_constructor_args.py  occupation_matches.json
src/esco_skill_extractor/: __init__.py  __main__.py  models.py  occupation.py  ollama_http.py  paths.py  skill_extraction.py
src/esco_skill_extractor/data/: esco_occupations.csv
tests/: test_models.py  test_paths.py  test_version.py
