[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "esco-skill-extractor"
version = "0.1.0"
description = "Map job postings to ESCO occupations and extract ESCO skills using embeddings and LLMs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SkillScapes Analytics" }]
keywords = ["esco", "skills", "nlp", "embeddings", "hr", "occupations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "einops>=0.7",
    "httpx>=0.27",
    "joblib>=1.3",
    "numpy>=1.24",
    "openai>=1.40",
    "pandas>=2.0",
    "requests>=2.28",
    "scikit-learn>=1.3",
    "sentence-transformers>=3.0",
    "torch>=2.0",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/Datalab-AUTH/esco-skill-extractor"
Repository = "https://github.com/Datalab-AUTH/esco-skill-extractor"
Changelog = "https://github.com/Datalab-AUTH/esco-skill-extractor/blob/main/CHANGELOG.md"

[project.scripts]
esco-skill-extractor = "esco_skill_extractor.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/esco_skill_extractor"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/esco_skill_extractor",
    "/tests",
    "/examples",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/NOTICE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/esco_skill_extractor/occupation.py" = ["E501"]
"src/esco_skill_extractor/skill_extraction.py" = ["E402", "E501"]
